# FasterConfig

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  dnsserver  fasterconfig-msg.html  fasterconfig.conf  go.bash
dnsLookup/: Makefile  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
pic/: Thumbs.db
src/: CMakeLists.txt  DNSLookup.cpp  DNSLookup.h  application.cpp  application.h  dnsserver.cpp  dnsserver.h  exception.h  httpd.cpp  httpd.h  iptable.cpp  iptable.h  logger.cpp  logger.h  look_up_example.cpp  main.cpp  message.cpp  message.h  query.cpp  query.h  resolver.cpp  resolver.h  response.cpp  response.h  server.cpp  server.h
test/dnsLookup/: Makefile  main.cpp
test/dnsserver/: Makefile  dnsserver  main.cpp
test/httpServer/: Makefile  main.cpp
test/iptable/: Makefile  main.cpp
